Remove show all categories button class

--- a/main.css
+++ b/main.css
@@ -79,6 +79,7 @@ button {
   background-color: #e30613;
   color: white;
   border-style: none;
+  margin: 0 0 1em 0;
 }
 
 /*---------------extra categories-------------*/
