--- a/main.css
+++ b/main.css
@@ -48,10 +48,11 @@ p {
   margin: 0 0 1.6em 0;
 }
 
-.cat-select-label {
+label {
   display: flex;
   align-items: center;
   justify-self: start;
+  width: 280px;
   color: #646464;
 }
 
@@ -60,12 +61,13 @@ p {
   margin: 0 3px 0 0;
 }
 
-.cat-select-check {
+input[type="checkbox"] {
   width: 18px;
   height: 18px;
+}
+
+.cat-select-check {
   margin: 0 1em 0 1em;
-  /* opacity: 0;
-  border: solid 1px black; */
 }
 
 .cat-selection img {
@@ -115,8 +117,30 @@ input::placeholder {
   padding: 0 0 0 1em;
 }
 
-form label {
+.privacy-policy-wrapper {
+  display: flex;
   width: 280px;
-  color: #646464;
+  margin: 0 0 1.6em 0;
+}
+
+.privacy-policy-wrapper input {
+  width: 18px;
+  height: 18px;
+  margin: 0;
+}
+
+.privacy-policy-wrapper p {
+  width: 250px;
+  padding: 0;
+  margin: 0 0 0 0.8em;
+  text-align: start;
+}
+
+.privacy-policy {
+  text-decoration: underline;
+}
+
+.privacy-policy:hover {
+  cursor: pointer;
 }
 
