--- a/main.css
+++ b/main.css
@@ -2,6 +2,7 @@ body {
   margin: 0;
   box-sizing: border-box;
   font-size: 14px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .main {
