--- a/main.css
+++ b/main.css
@@ -167,16 +167,17 @@ form {
 }
 
 .signup-success h1 {
-  font-size: 2em;
+  font-size: 2.5em;
   color: white;
 }
 
 .signup-success h2 {
   width: 60%;
   text-align: center;
+  margin: 0 0 1em 0;
 }
 
 .success-img {
-  width: 80%;
+  width: 50%;
   height: auto;
 }
