--- a/main.css
+++ b/main.css
@@ -27,6 +27,7 @@ p {
   padding: 0 1em 0 1em;
   margin: 0 0 1.6em 0;
   color: #646464;
+  font-weight: 600;
 }
 
 /*-----------category selection styles--------------*/
@@ -123,6 +124,7 @@ button:hover {
 }
 
 /*----------------signup form----------------*/
+
 .newsletter-signup {
   display: none;
 }
@@ -143,23 +145,24 @@ form {
 }
 
 .privacy-policy-wrapper {
-  position: relative;
   display: flex;
+  align-items: flex-start;
   width: 280px;
   margin: 0 0 1.6em 0;
 }
 
-.privacy-policy-wrapper input {
+.privacy-policy-label {
   width: 18px;
-  height: 18px;
-  margin: 0;
+}
 
+.privacy-policy-label span::before {
+  margin: 0 1.5em 0 0;
 }
 
 .privacy-policy-wrapper p {
   width: 250px;
   padding: 0;
-  margin: 0 0 0 0.8em;
+  margin: 0 0 0 1em;
   text-align: start;
 }
 
