--- a/main.css
+++ b/main.css
@@ -146,6 +146,7 @@ form {
 
 .last-form-div {
   display: flex;
+  align-items: center;
   flex-direction: column;
 }
 
@@ -275,8 +276,8 @@ form {
   }
 
   .last-form-div {
-    position: relative;
-    display: flex;
+    /* position: relative; */
+    flex-direction: row;
     justify-content: center;
     width: 100%;
     height: 80px;
